fix margin/padding issues on mobile

--- a/src/Components/Navigation/SideDrawer.css
+++ b/src/Components/Navigation/SideDrawer.css
@@ -3,10 +3,10 @@
   left: 0;
   top: 0;
   z-index: 100;
-  height: 100vh;
+  height: 50vh;
   width: 30%;
   /* opacity: 0.7; */
-  background: linear-gradient(rgba(0, 0, 0, 0.855), rgba(0, 0, 0, 0.897));
+  /* background: linear-gradient(rgba(0, 0, 0, 0.855), rgba(0, 0, 0, 0.897)); */
   border: 1px solid #d4afb9;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
 }
