--- a/src/Style/App.scss
+++ b/src/Style/App.scss
@@ -7,7 +7,6 @@
   @media (max-width: 500px) {
     height: 70vh;
   }
-
 }
 
 body {
@@ -15,7 +14,7 @@ body {
   margin: 0;
   color: #fff;
   overflow-x: hidden;
-  background: linear-gradient(rgba(34, 34, 34, 0.855), rgba(0, 0, 0, 0.897)),
+  background: linear-gradient(rgba(14, 13, 13, 0.795), rgba(0, 0, 0, 0.897)),
     url('../Images/unicorn.png') center center scroll;
   background-repeat: no-repeat;
   background-position: right bottom;
