--- a/src/Style/circle.scss
+++ b/src/Style/circle.scss
@@ -4,6 +4,9 @@
   @media (max-width: 768px) {
     --size: 400px;
   }
+  @media (max-width: 500px) {
+    --size: 350px;
+  }
 }
 
 .circle {
