--- a/src/Style/circletext.scss
+++ b/src/Style/circletext.scss
@@ -8,6 +8,10 @@
     font-size: 65px;
     padding-top: 80px;
   }
+  @media (max-width: 500px) {
+    font-size: 50px;
+    padding-top: 85px;
+  }
 }
 
 .h1Sub {
@@ -18,5 +22,8 @@
   text-align: center;
   @media (max-width: 768px) {
     font-size: 27px;
+  }
+  @media (max-width: 500px) {
+    font-size: 20px;
   }
 }
