--- a/src/Style/footer.scss
+++ b/src/Style/footer.scss
@@ -5,13 +5,11 @@
   padding: 15px;
   margin-top: 100px;
   @media (max-width: 768px) {
-    width: 45px;
-    height: 45px;
-    color: #d4afb9;
+    margin-top: 40px;
   }
 }
 
 .footerDiv {
   text-align: center;
-  margin: 45px;
+  margin: 55px;
 }
